force-app/main/default/objects/Quote/fields/All_Inclusive_Price__c.field-meta.xml
<CustomField>
    <fullName>All_Inclusive_Price__c</fullName>
    <label>All Inclusive Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>