force-app/main/default/objects/Quote/fields/Gst_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gst_Amount__c</fullName>
    <label>Gst Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>