force-app/main/default/objects/Quote/fields/Is_Manager_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Manager_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Manager Approval Required</label>
    <type>Checkbox</type>
</CustomField>