force-app/main/default/objects/Quote/fields/IsLocked__c.field-meta.xml
<CustomField>
    <fullName>IsLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsLocked</label>
    <type>Checkbox</type>
</CustomField>