force-app/main/default/objects/Quote/fields/IsSample__c.field-meta.xml
<CustomField>
    <fullName>IsSample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSample</label>
    <type>Checkbox</type>
</CustomField>