force-app/main/default/objects/Quote/fields/Plot_Saleable_Area_In_Sqft__c.field-meta.xml
<CustomField>
    <fullName>Plot_Saleable_Area_In_Sqft__c</fullName>
    <label>Plot Saleable Area (In Sqft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>