force-app/main/default/objects/Quote/fields/Quote_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Quote_End_Date_Time__c</fullName>
    <label>Quote End Date Time</label>
    <type>DateTime</type>
</CustomField>