force-app/main/default/objects/Quote/fields/Quote_Finalization_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Quote_Finalization_Approval_Status__c</fullName>
    <label>Quote Finalization Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>