force-app/main/default/objects/Quote/fields/Sales_Value_Of_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Value_Of_Unit__c</fullName>
    <label>Sales Value Of Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>