force-app/main/default/objects/Quote/fields/Total_Basic_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Basic_Cost__c</fullName>
    <label>Total Basic Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>