force-app/main/default/objects/Quote/fields/Total_Charge_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Charge_Amount__c</fullName>
    <label>Total Charge Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>