force-app/main/default/objects/Quote/fields/Total_Gst_For_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Gst_For_Charge__c</fullName>
    <label>Total Gst For Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>